[tool.poetry]
name = "гutility-bills"
version = "0.1.0"
description = ""
authors = ["Nikita Bazarov <bazarov228bazarov@yandex.ru>"]

[tool.black]
line-length = 100

[tool.isort]
multi_line_output = 3
line_length = 100
include_trailing_comma = true

[tool.ruff]
line-length = 100
exclude = ["alembic", ".venv"]
target-version = "py310"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.4"
SQLAlchemy = "^1.4.46"
alembic = "^1.9.1"
PySimpleGUI = "^4.60.4"
dependency-injector = "^4.41.0"

[tool.poetry.dev-dependencies]
isort = "^5.11.4"
black = "^22.12.0"
pre-commit = "^2.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
